--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,5 @@ jobs:
           git clone https://github.com/LionSuzune/Lappland-MD 
           sudo apt-get install ffmpeg imagemagick -y 
           cd Lappland-MD
-          bash install.sh
+          yarn install
           npm start
