--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Run a multi-line script
         run: |
           git clone https://github.com/LionSuzune/Lappland-MD 
-          sudo apt-get install ffmpeg imagemagick -y 
+          sudo apt-get install ffmpeg imagemagick git bash -y
           cd Lappland-MD
           yarn
           npm start
